test_suite5/ALAN/test_suite/alan-2022-examples/failing/000820_mutation.alan
source oC begin boolean Y, :=; relax end
